syntax = "proto3";

package shellstream;

option go_package = "./proto";

// ShellStreamingService provides real-time streaming logs
service ShellStreamingService {
  rpc Sh(ShellRequest) returns (stream ShellResponse);
  rpc Echo(ShellRequest) returns (stream ShellResponse);
}

// Request message to start Shell streaming
message ShellRequest {
  string command = 1;
  string containerId = 2;
}

// Response message containing Shell output chunks
message ShellResponse {
  string chunk = 1;
}
